--- a/PizzaDawg/index.html
+++ b/PizzaDawg/index.html
@@ -19,10 +19,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">MENU</a>
+                    <a class="nav-link" aria-current="page" href="./menu.html">MENU</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">AboutUS</a>
+                    <a class="nav-link" href="./formPage.html">AboutUS</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
