deleted old files

--- a/ShowBoatMotors/vehicles.html
+++ b/ShowBoatMotors/vehicles.html
@@ -8,11 +8,19 @@
     <title>Vehicles</title>
 </head>
 <body>
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 13rem;">
         <img src="images/caprice.jpeg" class="card-img-top" alt="caprice">
         <div class="card-body">
           <h5 class="card-title">Clean Title</h5>
           <p class="card-text">Garage Kept</p>
+          <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
+        </div>
+      </div>
+      <div class="card" style="width: 13rem;">
+        <img src="images/gmcar.JPG" class="card-img-top" alt="gmcar">
+        <div class="card-body">
+          <h5 class="card-title">All Highway Miles</h5>
+          <p class="card-text">Service records upon request</p>
           <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
         </div>
       </div>
