--- a/ShowBoatMotors/vehicles.html
+++ b/ShowBoatMotors/vehicles.html
@@ -8,6 +8,7 @@
     <title>Vehicles</title>
 </head>
 <body>
+    <h1>Vehicles</h1>
     <div class="card" style="width: 13rem;">
         <img src="images/caprice.jpeg" class="card-img-top" alt="caprice">
         <div class="card-body">
