--- a/ShowBoatMotors/vehicles.html
+++ b/ShowBoatMotors/vehicles.html
@@ -4,27 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Vehicles</title>
 </head>
 <body>
     <h1>Vehicles</h1>
-    <div class="card" style="width: 13rem;">
-        <img src="images/caprice.jpeg" class="card-img-top" alt="caprice">
-        <div class="card-body">
-          <h5 class="card-title">Clean Title</h5>
-          <p class="card-text">Garage Kept</p>
-          <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
+    <section class="container-fluid">
+      <div class=row>
+        <div class="col">
+          <div class="card" style="width: 13rem;">
+            <img src="images/caprice.jpeg" class="card-img-top" alt="caprice">
+            <div class="card-body">
+              <h5 class="card-title">Clean Title</h5>
+              <p class="card-text">Garage Kept</p>
+              <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
+            </div>
+          </div>
+
+        </div>
+        <div class="col">
+          <div class="card" style="width: 13rem;">
+            <img src="images/gmcar.JPG" class="card-img-top" alt="gmcar">
+            <div class="card-body">
+              <h5 class="card-title">All Highway Miles</h5>
+              <p class="card-text">Service records upon request</p>
+              <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
+            </div>
+          </div>
+
+        </div>
+        <div class="col">
+          <div class="card" style="width: 13rem;">
+            <img src="images/gmcar.JPG" class="card-img-top" alt="gmcar">
+            <div class="card-body">
+              <h5 class="card-title">All Highway Miles</h5>
+              <p class="card-text">Service records upon request</p>
+              <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 13rem;">
-        <img src="images/gmcar.JPG" class="card-img-top" alt="gmcar">
-        <div class="card-body">
-          <h5 class="card-title">All Highway Miles</h5>
-          <p class="card-text">Service records upon request</p>
-          <a href="./appoinments.html" class="btn btn-primary">BUY NOW</a>
-        </div>
-      </div>
+    </section>
+
+
+    
+      
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
