--- a/vehicles.html
+++ b/vehicles.html
@@ -41,7 +41,7 @@
   <h1>Vehicles</h1>
     <section class="container-fluid">
       <div class=row>
-        <div class="col">
+        <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card" style="width: 13rem;">
             <img src="images/caprice.jpeg" class="card-img-top" alt="caprice">
             <div class="card-body">
@@ -74,7 +74,6 @@
           </div>
         </div>
       </div>
-
       <div class="col">
         <div class="card" style="width: 13rem;">
           <img src="./images/gmcar.JPG" class="card-img-top" alt="gmcar">
